5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_1571.log
== TEST (2019-03-25 09:15:07) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())

-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:15:14) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())

-- EXECUTION TIME:
0.211637
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:15:44) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())

-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:15:52) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())

-- EXECUTION TIME:
0.155388
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:16:59) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())

-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:17:16) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper().)

-- ERROR:
File "XXXX", line 2
    print(texto.upper().)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:17:27) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper()).

-- ERROR:
File "XXXX", line 2
    print(texto.upper()).
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:17:37) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- EXECUTION TIME:
0.130899
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:17:42) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:17:47) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- EXECUTION TIME:
0.135981
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:19:31) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- EXECUTION TIME:
0.178004
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:21:22) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:21:26) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- EXECUTION TIME:
0.123003
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:21:55) 
-- CODE:
frase = "Guido van Rossum criou o Python."
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:22:08) 
-- CODE:
frase = "Guido van Rossum criou o Python."
print(frase.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:22:14) 
-- CODE:
frase = "Guido van Rossum criou o Python."
print(frase.upper())
-- EXECUTION TIME:
0.160371
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:22:48) 
-- CODE:
frase = "Guido van Rossum criou o Python."
print(frase. upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:22:53) 
-- CODE:
frase = "Guido van Rossum criou o Python."
print(frase. upper())
-- EXECUTION TIME:
0.180491
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:23:05) 
-- CODE:
frase = Guido van Rossum criou o Python
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = Guido van Rossum criou o Python
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:23:19) 
-- CODE:
frase = "Guido van Rossum criou o Python"
print(frase.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:23:24) 
-- CODE:
frase = "Guido van Rossum criou o Python"
print(frase.upper())
-- EXECUTION TIME:
0.27279
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:23:25) 
-- CODE:
frase = "Guido van Rossum criou o Python"
print(frase.upper())
-- EXECUTION TIME:
0.124282
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:23:26) 
-- CODE:
frase = "Guido van Rossum criou o Python"
print(frase.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:24:21) 
-- CODE:
frase = "Guido van Rossum criou o Python"
print(frase.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:24:49) 
-- CODE:
frase = "Guido van Rossum criou o Python"
print(frase.upper())
-- EXECUTION TIME:
0.186131
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:47:59) 
-- CODE:
frase = "Guido van Rossum criou o Python"
print(frase.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:48:04) 
-- CODE:
frase = "Guido van Rossum criou o Python"
print(frase.upper())
-- EXECUTION TIME:
0.14699
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:48:14) 
-- CODE:
frase = "Guido van Rossum criou o Python."
print(frase.upper())
-- EXECUTION TIME:
0.188944
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:48:57) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:49:07) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- EXECUTION TIME:
0.128984
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:54:12) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:54:18) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- EXECUTION TIME:
0.205591
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:55:05) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:56:14) 
-- CODE:
texto = "Guido van Rossum criou o Python"
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:56:24) 
-- CODE:
texto = "Guido van Rossum criou o Python"
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:57:28) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 09:57:32) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- EXECUTION TIME:
0.141568
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:58:41) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print("texto.upper()")
-- OUTPUT:
texto.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:59:27) 
-- CODE:
texto = Guido van Rossum criou o Python
print(texto.upper())
-- ERROR:
File "XXXX", line 1
    texto = Guido van Rossum criou o Python
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:59:47) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 10:00:09) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- EXECUTION TIME:
0.161677
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 10:03:02) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:17:51) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:20:46) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:20:51) 
-- CODE:
texto = "Guido van Rossum criou o Python."
print(texto.upper())
-- EXECUTION TIME:
0.143477
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:21:05) 
-- CODE:
texto = "Guido van Rossum criou o Python."
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:17:42) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:05) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:27) 
-- CODE:
texto = " Guido van Rossum criou o Python."
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:21:30) 
-- CODE:
texto = " Guido van Rossum criou o Python."
print(texto.upper())
-- EXECUTION TIME:
0.171571
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:03) 
-- CODE:
texto = " Guido van Rossum criou o Python."
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:18) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:41) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:42) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:29) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- EXECUTION TIME:
0.182266
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:18) 
-- CODE:
texto = input("Guido van Rossum criou o Python")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:26:27) 
-- CODE:
texto = input("Guido van Rossum criou o Python")
print(texto.upper())
-- EXECUTION TIME:
0.160868
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
